--- a/_config.yml
+++ b/_config.yml
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Nithin Venugopal"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "Amazon AWS enthusiast"
+  location         : "Charlotte, NC"
   email            :
   uri              :
   bitbucket        :
