--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Nithin Venugopal"
+title                    : "Nithin Venugopal - Personal Blog"
 title_separator          : "-"
 name                     : "Nithin Venugopal"
 description              : "Cloud is real"
