--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Nithin Venugopal"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/19260531_1764986953519359_4579578632718253082_n.jpg"
   bio              : "Amazon AWS enthusiast"
   location         : "Charlotte, NC"
   email            :
