--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Nithin Venugopal"
   avatar           : "/assets/19260531_1764986953519359_4579578632718253082_n.jpg"
-  bio              : "Amazon AWS enthusiast"
+  bio              : "Amazon AWS Solution Architect"
   location         : "Charlotte, NC"
   email            :
   uri              :
