--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
+  github           : "https://github.com/nithinvenugopal"
   gitlab           :
   google_plus      :
   keybase          :
