--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,7 @@ author:
   name             : "Nithin Venugopal"
   avatar           : "/assets/19260531_1764986953519359_4579578632718253082_n.jpg"
   bio              : "Cloud Solution Architect"
+  Quote            : "Don't just chase your dreams, chase your reality - Christopher Nolan"
   location         : "Charlotte, NC"
   email            :
   uri              :
