--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/nithinvenugopal"
+  github           : "nithinvenugopal"
   gitlab           :
   google_plus      :
   keybase          :
