--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  # - title: "Quick-Start Guide"
+  - title: "/"Don't just chase your dreams, chase your reality - C.Nolan/""
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
