--- a/_config.yml
+++ b/_config.yml
@@ -79,10 +79,10 @@ analytics:
 author:
   name             : "Nithin Venugopal"
   avatar           : "/assets/19260531_1764986953519359_4579578632718253082_n.jpg"
-  bio              : "Cloud Solution Architect"
+  bio              : "Software Engineer at ARM Inc"
   Quote            : "Don't just chase your dreams, chase your reality - Christopher Nolan"
-  location         : "Charlotte, NC"
-  email            :
+  location         : "Austin, Tx"
+  email            : "nithin.sv3@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
